package project;

import java.util.List;

public class Iscritti {
    public Studente studentiIscritto;
    public boolean idoneo;

}
