@startuml
skinparam dpi 300
'https://plantuml.com/class-diagram
!theme vibrant
class Autenticazione {
  +email: string
  +password: string
}
Autenticazione "1" --- "1" Utente:AccessoUtente
Autenticazione "1" - "1" Gestore:AccessoGestore
class Utente{
  +nome: string
  +cognome: string
  +dataNascita: Date
  +comunediNascita: string
  +sesso: sesso
  +codiceFiscale: string
}
note "{ Partial , Overlapping }" as N1
Utente ... N1
Operatore .. N1
Studente .. N1
class Sede {
  +città: string
  +via: string
  +civico: string
  +provincia: string
  +cap: Integer
}
class Gestore {
  +nome: string
  +descrizione: string
  +telefono: string
  +cod.Gestore: string
}
Gestore "*" - "1" Sede:Collocato
class Operatore{
  +cod.Operatore :string
}
class Studente{
  +cod.Studente: string
}
enum sesso{
M
F
}
Utente "1" -- "0..1" Operatore:EssereOperatore
Utente "1" -- "0..1" Studente:EssereStudente
Gestore "1" -- "0..*" Corso:Possiede
Corso "*" -- "*" Studente
Corso "*" -- "1..*" Operatore
(Corso,Operatore)..Coordina
class Coordina{
  +Richiesta: boolean
}

class Corso{
  +titolo: string
  +descrizione: string
  +iscrizioniMassime: integer
  +tassoPresenzeMinime: integer
  +numeroLezioni: integer
  +Privato: boolean
  +cod.Corso: string
}
class AreaTematica{
  +tag: string
}
Corso "*" -- "1..*" AreaTematica:Appartengono
class Lezione{
  +titolo: string
  +descrizione: string
  +dataoraInizio: Timestamp
  +durata: Time
  +cod.Lezione: string
}
Corso "1" - "1..*" Lezione:Svolto
(Corso, Studente) .. Iscritti
Lezione "*" -- "*" Studente
(Lezione,Studente)..Prenotazioni
class Prenotazioni{
Presente: boolean
}
class Iscritti{
+idonei: boolean
+Richiesta: boolean
}
class Statistiche{
  +presenzeMinime: integer
  +presenzeMassime: integer
  +presenzeMedie: integer
  +percentualeRiempimentoMedia: integer
}
Corso "1" - "1" Statistiche:Associate
@enduml